# Pair-With-Peer

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  client_handler.cpp  server_handler.cpp
.github/workflows/: build.yml
docs/: PROTOCOL.md
include/pwp/: files.hpp  protocol.hpp
src/: peer.cpp  tracker.cpp
tests/: e2e.sh  protocol_tests.cpp
